# phonebook-app

./: LICENSE  Makefile  README.md  cli.py  pyproject.toml
app/core/: cli_app.py  constants.py  types.py
app/core/cli/: app.py  exit.py  message.py  validate.py
app/core/constants/: cli.py  types.py
app/core/phonebook/: create_entry.py  delete_entries_by_phone.py  print_phonebook.py  search_phonebook_by_first_name.py  search_phonebook_by_full_name.py  search_phonebook_by_last_name.py  search_phonebook_by_phone.py  update_name_by_phone.py
app/core/phonebook/search/: base.py  first_name.py  full_name.py  last_name.py  location.py  phone.py
app/tests/: test_cli_app.py
